@@ -15,7 +15,7 @@ log4j.appender.file.layout.ConversionPattern==%t %p [%c{2}] - %m%n
 
 log4j.logger.org.springframework.osgi.web.tomcat.internal=TRACE
 #log4j.logger.org.apache.catalina=INFO
-log4j.logger.org.springframework.osgi=INFO
+log4j.logger.org.springframework.osgi.io=TRACE
 #log4j.logger.org.springframework=TRACE
 #log4j.logger.org.springframework.osgi.iandt=TRACE
 #log4j.logger.org.springframework.osgi.test=TRACE
