@@ -16,10 +16,13 @@ Package org.springframework.osgi.service
 
 Package org.springframework.osgi.mock
 * improved dependency between MockBundleContext and the bundle it returns
+* added OSGi R4.1 start/stop signatures to MockBundle
+* added OSGi R4.1 compareTo contract to MockServiceReference
 
 Package org.springframework.osgi.web
 * DefaultContextPathStrategy allows "/" contexts to be specified through Web-ContextPath header
 * improved encoding of user defined context paths
+
 
 Changes in version 1.1.0 final (2008-07-04)
 -------------------------------------------
